--- a/localization/english/missions/xiongnu_missions_ti_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_ti_l_english.yml
@@ -14,7 +14,7 @@
  xiongnu_missions_01_task_2_DESC: "The blood of the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] family has been chosen to lead our tribal confederation to glory over our neighbors, with the promise of the spoils of war. Long live the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] line!"
 
  xiongnu_missions_01_task_3: "Touman's Tribe"
- xiongnu_missions_01_task_3_DESC: "Touman [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] has shown great promise as both a warrior and strong political leader. He commands the respect of the various tribesmen of our realm, and is the best fit to lead the next generation of [ROOT.GetCountry.GetName] conquest and reform."
+ xiongnu_missions_01_task_3_DESC: "[ROOT.GetCountry.GetRuler.GetName] has shown great promise as both a warrior and strong political leader. He commands the respect of the various tribesmen of our realm, and is the best fit to lead the next generation of [ROOT.GetCountry.GetName] conquest and reform."
 
  xiongnu_missions_01_task_4: "Annex Anhou"
  xiongnu_missions_01_task_4_DESC: "Our brethren, the [GetCountry('AHO').GetName] tribes, have long vexed the [ROOT.GetCountry.GetName] by raiding our pasturelands and capturing our horses. It is time to unite them through conquest and bring the raids to an end."
@@ -29,7 +29,7 @@
  xiongnu_missions_01_task_7_DESC: "What are we without horses? We must breed more and better horses if we ever hope to continue to dominate the steppe."
 
  xiongnu_missions_01_task_8: "Early Steppe Stirrups"
- xiongnu_missions_01_task_8_DESC: "While the origin of proto-stirrups have long been debated, it is without a doubt that [ROOT.GetCountry.GetName] hard-wood saddles contributed to the development and proliferation of technological developments that led to the stirrup we know today. Let us invest in the this equestrine technology, and all will fear the sound of our hooves."
+ xiongnu_missions_01_task_8_DESC: "While the origin of proto-stirrups have long been debated, it is without a doubt that [ROOT.GetCountry.GetName] hard-wood saddles contributed to the development and proliferation of technological advancements that led to the stirrup we know today. Let us invest in the this equestrine technology, and all will fear the sound of our hooves."
 
  xiongnu_missions_01_task_9: "Prairies and Pastures"
  xiongnu_missions_01_task_9_DESC: "Raising livestock in the grasslands and pastures of the steppe is the backbone of our political and economic system. This cannot be ignored by the [ROOT.GetCountry.GetName] political leadership."
@@ -79,7 +79,7 @@
  me_xiongnu_01_2.a: "The Luandi family has finally taken its rightful place."
 
  me_xiongnu_01_3_title: "$xiongnu_missions_01_task_3$"
- me_xiongnu_01_3_desc: "Touman [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] has shown himself to be the greatest warrior of the upcoming generation. Of course by being a [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective], he enjoys the status and privelege of those that are part of the tribal elite, but he has also proven himself to be fearsome warrior, an adept strategist, a pious follower of #E Tengri#! and a cunning politician. He is the man that will lead the [ROOT.GetCountry.GetName] tribes, with horse and iron, to glorious victory!"
+ me_xiongnu_01_3_desc: "[ROOT.GetCountry.GetRuler.GetName] has shown himself to be the greatest warrior of the upcoming generation. Of course by being a [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective], he enjoys the status and privelege of those that are part of the tribal elite, but he has also proven himself to be fearsome warrior, an adept strategist, a pious follower of #E Tengri#! and a cunning politician. He is the man that will lead the [ROOT.GetCountry.GetName] tribes, with horse and iron, to glorious victory!"
  me_xiongnu_01_3.a: "Touman will make a great Chanyu."
 
  me_xiongnu_01_4_title: "$xiongnu_missions_01_task_4$"
@@ -119,11 +119,11 @@
  me_xiongnu_01_12.a: "We will never again bow to the southern horselords!"
 
  me_xiongnu_01_13_title: "$xiongnu_missions_01_task_13$"
- me_xiongnu_01_13_desc: "The wife of [ROOT.GetCountry.GetRuler.GetName], [ROOT.GetCountry.GetRuler.GetSpouse.GetName], gazed upon the child #E Modun#! with utter contempt and hatred. Her own son, first-born legitimate child of the #E Chanyu#!, should be the apple of the lord's eye. She will stop at nothing to convince [ROOT.GetCountry.GetRuler.GetName] to reject this child born of a concubine at any turn, and elevate and prepare her own son to lead the clans. For now, the #E Chanyu#! will raise the child as any other, while she works behind the scenes to undermine him..."
+ me_xiongnu_01_13_desc: "The wife of [ROOT.GetCountry.GetRuler.GetName], gazed upon the child #E Modun#! with utter contempt and hatred. Her own son, first-born legitimate child of the #E Chanyu#!, should be the apple of the lord's eye. She will stop at nothing to convince [ROOT.GetCountry.GetRuler.GetName] to reject this child born of a concubine at any turn, and elevate and prepare her own son to lead the clans. For now, the #E Chanyu#! will raise the child as any other, while she works behind the scenes to undermine him..."
  me_xiongnu_01_13.a: "Let us see what will become of this young upstart..."
 
  me_xiongnu_01_14_title: "$xiongnu_missions_01_task_14$"
- me_xiongnu_01_14_desc: "At the request of, [ROOT.GetCountry.GetRuler.GetSpouse.GetName], the Chanyu's beloved wife, [ROOT.GetCountry.GetRuler.GetName] has decided to exile #E Modun#! to the court of our enemy, the [GetCountry('YEZ').GetName], as a hostage, under the pretense that the Chanyu had to give in to the demands of the [GetCountry('YEZ').GetName], lest they raid our lands. This is a certain death pentalty for the young upstart, all according to the plan of [ROOT.GetCountry.GetRuler.GetSpouse.GetName]."
+ me_xiongnu_01_14_desc: "At the request of the Chanyu's beloved wife, [ROOT.GetCountry.GetRuler.GetName] has decided to exile #E Modun#! to the court of our enemy, the [GetCountry('YEZ').GetName], as a hostage, under the pretense that the Chanyu had to give in to the demands of the [GetCountry('YEZ').GetName], lest they raid our lands. This is a certain death pentalty for the young upstart, all according to the plan of the Chanyu's wife.."
  me_xiongnu_01_14.a: "We have finally ridden ourselves of Modun."
  
  me_xiongnu_01_1400_title: "Wooing the Captors"
@@ -131,7 +131,7 @@
  me_xiongnu_01_1400.a: "Modun's keepers are enamored by his magnetic charm."
  
  me_xiongnu_01_1401_title: "Modun's Escape"
- me_xiongnu_01_1401_desc: "#E Modun#!, fully aware of the spell he has put upon his enslavers, pretended to drink heavily with the [GetCountry('YEZ').GetName] tribemens one dark night, carrying on into the night. When he his captors had fallen asleep, #E Modun#! snuck into the stabled and mounted the fastest horse he could find, quickly riding off into the darkness. The [GetCountry('YEZ').GetName], shaking off a hangover in the morning, noticed their prisoner had escaped in the night, and themselves deserted the camp, fearing reprisal from their confederation leader, [GetCountry('YEZ').GetRuler.GetName]. Modun's father, [ROOT.GetCountry.GetRuler.GetName], pretended to welcome him back with open arms, while [ROOT.GetCountry.GetRuler.GetSpouse.GetName] seethed in quiet anger at the stunt #E Modun#! had just pulled off. In fact, [ROOT.GetCountry.GetRuler.GetName] was forced to award his son with a high ranking military position and an army to lead, at the demand of the tribal council."
+ me_xiongnu_01_1401_desc: "#E Modun#!, fully aware of the spell he has put upon his enslavers, pretended to drink heavily with the [GetCountry('YEZ').GetName] tribemens one dark night, carrying on into the night. When he his captors had fallen asleep, #E Modun#! snuck into the stabled and mounted the fastest horse he could find, quickly riding off into the darkness. The [GetCountry('YEZ').GetName], shaking off a hangover in the morning, noticed their prisoner had escaped in the night, and themselves deserted the camp, fearing reprisal from their confederation leader, [GetCountry('YEZ').GetRuler.GetName]. Modun's father, [ROOT.GetCountry.GetRuler.GetName], pretended to welcome him back with open arms, while his wife seethed in quiet anger at the stunt #E Modun#! had just pulled off. In fact, [ROOT.GetCountry.GetRuler.GetName] was forced to award his son with a high ranking military position and an army to lead, at the demand of the tribal council."
  me_xiongnu_01_1401.a: "What a wiley guy, that Modun is."
  
  me_xiongnu_01_1402_title: "Commanding Loyalty"
@@ -176,7 +176,7 @@
  me_xiongnu_01_19.a: "The Wusun are wise to heed our warnings..."
 
  me_xiongnu_01_20_title: "$xiongnu_missions_01_task_20$"
- me_xiongnu_01_20_desc: "The Great #E Chanyu Modun#! [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective], fearless and charismatic, has ambitions of plunder and conquest beyond the scope of even his great father Touman Luandi. The Great Chanyu, after a meeting with the shamans, has spoken to the court about his visions of conquest which span from west to east, uniting tribes unmet and tongues unknown across the vastness of the #E Eurasian Steppe#!. Under the banner of the [ROOT.GetCountry.GetName], the horsemen of steppe will wage consolidate and wage war on the civilizations of the south!"
+ me_xiongnu_01_20_desc: "The Great #E Chanyu Modun#! [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective], fearless and charismatic, has ambitions of plunder and conquest beyond the scope of even his great father Touman Luandi. The Great Chanyu, after a meeting with the shamans, has spoken to the court about his visions of conquest which span from west to east, uniting tribes unmet and tongues unknown across the vastness of the #E Eurasian Steppe#!. Under the banner of the [ROOT.GetCountry.GetName], the horsemen of the steppe will wage consolidate and wage war on the civilizations of the south!"
  me_xiongnu_01_20.a: "Modun will ride forth to plunder and subjugate the great civilizations of the world!"
  
  me_xiongnu_01_21_title: "Rise of the Chanyu"
