--- a/localization/english/missions/zhongshan_missions_l_english.yml
+++ b/localization/english/missions/zhongshan_missions_l_english.yml
@@ -43,7 +43,7 @@
  zhongshan_missions_task_12: "Fall Of Zhao"
  zhongshan_missions_task_12_DESC: "\n\n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
- zhongshan_missions_task_13: "Exploit Bronze Mines"
+ zhongshan_missions_task_13: "Exploit Tin and Copper Mines"
  zhongshan_missions_task_13_DESC: "\n\n\n\n\n\n\n\n\n\n\n@egypt_mil19!"
 
  zhongshan_missions_task_14: "Tame The Steppe"
