mainly loc fixes

--- a/localization/english/acb_cultures_l_english.yml
+++ b/localization/english/acb_cultures_l_english.yml
@@ -176,8 +176,8 @@
  ARMY_NAME_japan: "$NUM$$ORDER$ Army"
  NAVY_NAME_japan: "$NUM$$ORDER$ Navy"
  COHORT_NAME_japan: "$NUM$$ORDER$ Cohort"
- japan_malename:0 "$NAME_MALE$ $REGNALNUMBER$ $FAMILY_MALE$ $NICKNAME$"
- japan_femalename:1 "$NAME_MALE$ $REGNALNUMBER$ $FAMILY_MALE$ $NICKNAME$"
+ japan_malename:0 "$FAMILY_MALE$ $REGNALNUMBER$ $NAME_MALE$ $NICKNAME$"
+ japan_femalename:1 "$FAMILY_MALE$ $REGNALNUMBER$ $NAME_MALE$ $NICKNAME$"
  ARMY_NAME_austronesian: "$NUM$$ORDER$ Army"
  NAVY_NAME_austronesian: "$NUM$$ORDER$ Navy"
  COHORT_NAME_austronesian: "$NUM$$ORDER$ Cohort"
@@ -188,6 +188,12 @@
  COHORT_NAME_ainu: "$NUM$$ORDER$ Cohort"
  ainu_malename:0 "$NAME_MALE$ $REGNALNUMBER$ $FAMILY_MALE$ $NICKNAME$"
  ainu_femalename:1 "$NAME_MALE$ $REGNALNUMBER$ $FAMILY_MALE$ $NICKNAME$"
+ ARMY_NAME_nivkh_group: "$NUM$$ORDER$ Army"
+ NAVY_NAME_nivkh_group: "$NUM$$ORDER$ Navy"
+ COHORT_NAME_nivkh_group: "$NUM$$ORDER$ Cohort"
+ nivkh_group_malename:0 "$NAME_MALE$ $REGNALNUMBER$ $FAMILY_MALE$ $NICKNAME$"
+ nivkh_group_femalename:1 "$NAME_MALE$ $REGNALNUMBER$ $FAMILY_MALE$ $NICKNAME$"
+
  saka_g_malename:0 "$NAME_MALE$ $REGNALNUMBER$ $FAMILY_MALE$ $NICKNAME$"
  saka_g_femalename:1 "$NAME_MALE$ $REGNALNUMBER$ $FAMILY_MALE$ $NICKNAME$"
  ARMY_NAME_saka_g: "$NUM$$ORDER$ Army"
