--- a/localization/english/missions/jomon_missions_l_english.yml
+++ b/localization/english/missions/jomon_missions_l_english.yml
@@ -223,7 +223,7 @@
 
  ## EMISHI ##
  emishi_missions:0 "Trouble in #E Tohoku#!"
- emishi_missions_DESCRIPTION:0 "The [GetCulture('dewa').GetCultureGroup.GetName|Y] of #E Honshu#! have been pushed entirely into the #E Tohokuku#! area of northern #E Honshu#!. In now-faded memories, there was a time where the [GetCulture('dewa').GetCultureGroup.GetName|Y] lived all throughout what is now called as #E Wa#!.\n\nSince the #Y Yayoi#! invaded #E Wa#!, the #E Yayoi Jidai#! has reigned over the isolated island. The #Y Jomon#! are enterring into what is known as the #E Epi-Jomon Jidai#!, an era that would see the last remnants of #Y Jomon#! culture absorbed into the coming #Y Yayoi#! culture, or migrating north to the island they call #E Ezogashima#!."
+ emishi_missions_DESCRIPTION:0 "The [GetCulture('dewa').GetCultureGroup.GetName|Y] of #E Honshu#! have been pushed entirely into the #E Tohoku#! area of northern #E Honshu#!. In now-faded memories, there was a time where the [GetCulture('dewa').GetCultureGroup.GetName|Y] lived all throughout what is now called as #E Wa#!.\n\nSince the #Y Yayoi#! invaded #E Wa#!, the #E Yayoi Jidai#! has reigned over the isolated island. The #Y Jomon#! are enterring into what is known as the #E Epi-Jomon Jidai#!, an era that would see the last remnants of #Y Jomon#! culture absorbed into the coming #Y Yayoi#! culture, or migrating north to the island they call #E Ezogashima#!."
  emishi_missions_CRITERIA_DESCRIPTION:0 "This mission will be completed when the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] have united the [GetCulture('dewa').GetCultureGroup.GetName|Y] of #E Tohoku#!."
  emishi_missions_BUTTON_TOOLTIP:0 "The Kamuy will lead the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] to victory!"
 
