Add New Japanese Missions to GUI / Block

--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -328,7 +328,11 @@
  lu_start: "#T Lu#!\nDifficulty: #Y Hard#!\n\n$lu_heritage_desc$"
  zhongshan_start: "#T Zhongshan#!\nDifficulty: #Y Hard#!\n\n$zhongshan_heritage_desc$"
  dian_start: "#T Dian#!\nDifficulty: #Y Hard#!\n\n$dian_heritage_desc$"
-
+ 
+ esan_start: "#T Esan#!\nDifficulty: #Y Medium#!\n\n$esan_heritage_desc$"
+ sunazawa_start: "#T Sunazawa#!\nDifficulty: #Y Medium#!\n\n$jomon_heritage_desc$"
+ liukiu_start: "#T Liukiu#!\nDifficulty: #Y Medium#!\n\n$liukiu_heritage_desc$"
+ 
  sapmi_start: "#T Skirithfinia#!\nDifficulty: #Y Medium#!\n\n$skirithfinia_heritage_desc$"
 
  #AOS GOVERNMENTS
