--- a/localization/english/missions/sapmi_missions_l_english.yml
+++ b/localization/english/missions/sapmi_missions_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
 
  sapmi_missions: "Patrol the Snow"
- sapmi_missions_DESCRIPTION: "Mission description"
+ sapmi_missions_DESCRIPTION: "The snowy and frozen lands, filled with lakes of ice and fields of white, and of course the [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] people of the [SCOPE.GetRootScope.GetCountry.GetName|E] tribe. Make no mistake, the sparse population of these lands does not mean it is a land of pushovers. The [SCOPE.GetRootScope.GetCountry.GetPrimaryCulture.GetName|Y] are experts at capturing birds of prey, herding reindeer, and thriving in a land no pushover would ever step foot in."
  sapmi_missions_CRITERIA_DESCRIPTION: "This mission will be completed when"
- sapmi_missions_BUTTON_TOOLTIP: ""
+ sapmi_missions_BUTTON_TOOLTIP: "Let us patrol the snow, then!"
 
  #Missions
 
@@ -17,16 +17,16 @@
  sapmi_missions_task_3_DESC: "We should establish a fleet of explorers who shall navigate through the Baltic Sea, and find opportunities for our own colonial ambitions."
 
  sapmi_missions_task_4: "Development of Skirith"
- sapmi_missions_task_4_DESC: ""
+ sapmi_missions_task_4_DESC: "In order to survive, we must adapt. As time moves on, our ability to navigate the fields of snow, hide in the white, and dominate others who try to invade will improve."
 
  sapmi_missions_task_5: "Control the Baltic Trade"
  sapmi_missions_task_5_DESC: "Baltic fishes nourish our people, and its waves lead us to foreign treasures. But it also plays another important role as it is our sea of commerce and trade. We should establish markets in key provinces of our country so we can control the trade."
 
- sapmi_missions_task_6: "Honor our Ancestors" #'Muricans forget u
- sapmi_missions_task_6_DESC: ""
+ sapmi_missions_task_6: "Honor our Ancestors" #'Muricans forget u \\ ur mum ~ izn
+ sapmi_missions_task_6_DESC: "The land called #E Tivotek#! would be a perfect place for us to arrect a #E #Y Tarand Grave#!#!, the signature burial style of our people."
 
- sapmi_missions_task_7: "Colonize Scandia" #should be colonise
- sapmi_missions_task_7_DESC: ""
+ sapmi_missions_task_7: "Colonize Scandia" #should be colonise \\ if you call us colonizers at least let us spell it right ;p ~ izn
+ sapmi_missions_task_7_DESC: "Across the sea lays a land called #T Scandia#!. Like our homeland, it is cold, filled with lakes, and ripe for the taking. Let us use what we have learned at home to expand our influence west."
 
  sapmi_missions_task_8: "White Death of the Fenns"
  sapmi_missions_task_8_DESC: "It's time for our great nation to shed the attire of a modest domain of provinces and unleash our great might upon the unsuspecting Fenns. Tales of our military might will be born from our many campaigns to come."
@@ -35,7 +35,7 @@
  sapmi_missions_task_9_DESC: "Continuing on the path to proselytize our people, we must strive forward and found a new central sanctuary buzzing with priest activity, as a symbol of our unstoppable and unquenchable growth!"
 
  sapmi_missions_task_10: "Scandian Takeover"
- sapmi_missions_task_10_DESC: ""
+ sapmi_missions_task_10_DESC: "Our success in colonizing #T Scandia#! spurs on our desire to dominate the area. We shall have all of #T Scandia#! for our people!"
 
  sapmi_missions_task_11: "Baltic Dominance"
  sapmi_missions_task_11_DESC: "The seas of the Baltic are a congenial place for a strong power. Due to recent attempts of nomads and Germanics, we must strive to protect our coasts and assert our dominance over its coasts!"
@@ -52,70 +52,70 @@
 
  #Events
  me_sapmi_1_title: "$sapmi_missions_task_1$"
- me_sapmi_1_desc: ""
- me_sapmi_1.a: ""
+ me_sapmi_1_desc: "We must dominate the sea! It is our lifeblood. From it merchants come, food can be imported, furs can be exported. It is only natural that a people like us produce a navy fitting for our needs. This will also allow us to further our influence, if we so wish to do so, across the sea."
+ me_sapmi_1.a: "We will seize the seas!"
 
  me_sapmi_2_title: "$sapmi_missions_task_2$"
- me_sapmi_2_desc: ""
- me_sapmi_2.a: ""
+ me_sapmi_2_desc: "The recent efforts we have put into agriculture have allowed every #E Sapmi#! to have a stomach full of fish! The winterlands we live in may be sparse in food, but no longer will it be so sparse of people."
+ me_sapmi_2.a: "A strong foundation for a strong people."
 
  me_sapmi_3_title: "$sapmi_missions_task_3$"
- me_sapmi_3_desc: ""
- me_sapmi_3.a: ""
+ me_sapmi_3_desc: "From the river #E Velho#! and #E Musta#! to the river #E Vain#! our ships sailed. Our understanding of the terrain and surveying of the land is adequate enough as it is attractive. Although the territory belonds to the #E Fennic#! peoples... these lands fall well within our naval capabilities. Perhaps too then, they should fall under our field capabilities as well."
+ me_sapmi_3.a: "The lands of the Fenns will be ours!"
  
  me_sapmi_300_title: "$sapmi_missions_task_3$"
- me_sapmi_300_desc: ""
- me_sapmi_300.a: ""
+ me_sapmi_300_desc: "In order to explore the #E Baltic Sea#!, we must pay the experienced leadership from our own navy. The captain of the crew will need to be paid, but the allure of the sea and any mysteries it may hold is certainly well worth the gold."
+ me_sapmi_300.a: "Sail carefully, captain."
  
  me_sapmi_301_title: "$sapmi_missions_task_3$"
- me_sapmi_301_desc: ""
- me_sapmi_301.a: ""
- me_sapmi_301.b: ""
+ me_sapmi_301_desc: "As the crew is all but ready, the captain approaches you with an unexpected, and frankly, unwanted request. He asks for you to bequeath even more gold. He assures it is necessary to keep his crew in line, especially for a voyage such as this."
+ me_sapmi_301.a: "I trust you will use the extra funds wisely."
+ me_sapmi_301.b: "Hah, if the snow turns to gold, sure."
 
  me_sapmi_4_title: "$sapmi_missions_task_4$"
- me_sapmi_4_desc: ""
- me_sapmi_4.a: ""
+ me_sapmi_4_desc: "We #E Sapmi#! of #E Srikith#! have become very well adapted to our environment. As time proceeds, so too do our capabilities. Young #E Sapmi#! are trained to be one with the snow. No one can match our affinity for the cold, nor our dominance in battle in our environment."
+ me_sapmi_4.a: "Rain down arrows from the depths of the snows."
 
  me_sapmi_5_title: "$sapmi_missions_task_5$"
- me_sapmi_5_desc: ""
- me_sapmi_5.a: ""
+ me_sapmi_5_desc: "The #E Baltic Sea#! trade is the most important thing for us to control. Our economy consists of trading furs, reindeers, birds, and more endemic creatures and products from our land. In controlling the whole of the traderoutes, we amplify our profits. And in a harsh environment like ours, every piece of gold counts."
+ me_sapmi_5.a: "The Baltic is mare nostrum."
 
  me_sapmi_6_title: "$sapmi_missions_task_6$"
- me_sapmi_6_desc: ""
- me_sapmi_6.a: ""
+ me_sapmi_6_desc: "The #E Tarand Grave#! structures can be found all over #E Kalmistomaki#! and #E Ilmandu#!. They represent the defining way we lay the dead to rest. The single burial graves protrude from the ground, covered by rolling stones, and often adorned with some artifacts inside. #E Tivotek#! was the perfect site to commission a particularly well made grave, and now our ancestors will know honor in the afterlife."
+ me_sapmi_6.a: "May we all be honored in death."
 
  me_sapmi_7_title: "$sapmi_missions_task_7$"
- me_sapmi_7_desc: ""
- me_sapmi_7.a: ""
+ me_sapmi_7_desc: "The land of #E Scandia#! is filled with a foreign people called #E Scandians#!. However, they seem utterly unable to stop our domination of the region. Our homelands are reminiscent of these new lands, and like our homelands, we can expand our influence here unopposed."
+ me_sapmi_7.a: "There can be only one snowfairing people!"
 
  me_sapmi_8_title: "$sapmi_missions_task_8$"
- me_sapmi_8_desc: ""
- me_sapmi_8.a: ""
+ me_sapmi_8_desc: "The conquest of the #E Fennic#! peoples between the rivers of #E Velho#! and #E Vain#! should show all that the greatness of the #E Sapmi#!. Galvinized by our successes, our eyes move across the coast of the #E Baltic#!. The whole of the sea should be ours!"
+ me_sapmi_8.a: "We will bring death from the whites of our homes."
 
  me_sapmi_9_title: "$sapmi_missions_task_9$"
- me_sapmi_9_desc: ""
- me_sapmi_9.a: ""
+ me_sapmi_9_desc: "A centralized sanctuary in our capital province will allow our people to feel more in-tune with #E Ilma#! and the other gods. A complex of #E Tarand Graves#! have also been arrected in addition to this. Our capital is becoming more and more centralized, but our spirits remain as wild as a blizzard."
+ me_sapmi_9.a: "Oh mightly Ilma, guide us well."
 
  me_sapmi_10_title: "$sapmi_missions_task_10$"
- me_sapmi_10_desc: ""
- me_sapmi_10.a: ""
+ me_sapmi_10_desc: "We have shown our resiliance and adaptability in the lands of #E Scandia#!. We are all but ready to descend unto the #E Scandians#! in their entirety. All of #E Scandia#! shall soon be dominated by #E Sapmi#!!"
+ me_sapmi_10.a: "They are powerless to stop us!"
 
  me_sapmi_11_title: "$sapmi_missions_task_11$"
- me_sapmi_11_desc: ""
- me_sapmi_11.a: ""
+ me_sapmi_11_desc: "As we capture the more of the coast, our dream of a true #E Baltic Mare Nostrum#! is within our sites. We shall continue to follow this blessed coastline then, and we shall not rest until the #E Baltic Sea#! is simply another term for the #E Sapmi Sea#!."
+ me_sapmi_11.a: "No Fenn, Aestian, nor Goth will stand in our way."
 
  me_sapmi_12_title: "$sapmi_missions_task_12$"
- me_sapmi_12_desc: ""
- me_sapmi_12.a: ""
+ me_sapmi_12_desc: "The #E Fennic#! people, although different, have many similarities to us. Furthermore, their skill in the snow, and adaptability to their own lands, proves they are worthy enough to be treated as citizens. Let us create a union betweeen #E Fenns#! and #E Sapmi#!, an alliance that is bound to curse our enemies with fear."
+ me_sapmi_12.a: "They are our brothers in arms!"
 
  me_sapmi_13_title: "$sapmi_missions_task_13$"
- me_sapmi_13_desc: ""
- me_sapmi_13.a: ""
- me_sapmi_13.b: ""
+ me_sapmi_13_desc: "Our recent efforts of centralizing our religion around our capital has had some criticism. As power is very slowly wrestled out of the hands of the many, and into the hands of our chief, a formal declaration of our intention is required. Regardless of our choice, our continued success will surely win the hearts of the people."
+ me_sapmi_13.a: "Let us organize the tribes!"
+ me_sapmi_13.b: "We will not encrouch on tribal rights!"
 
  me_sapmi_14_title: "$sapmi_missions_task_14$"
- me_sapmi_14_desc: ""
- me_sapmi_14.a: ""
+ me_sapmi_14_desc: "Our domination of the #E Baltic#! and influence of our culture across all of #E Europe#! has brought a golden era of #E Sapmi#! civilization. Our battle tactics are feared across the lands of our enemies. They call it #E The White Death#!. A name almost as terrifying as reality! Surely, this reputation will help push us into the next step of our civilization, whatever it may be."
+ me_sapmi_14.a: "The White Death waits for no one."
 
  #Tooltips
  sapmi_missions_task_1_admiral_martial_8: "We have an Admiral with a martial skill of at least 8."
@@ -139,13 +139,13 @@
  reorganised_sapmi_1: "Centralized Tribe"
  reorganised_sapmi_2: "Decentralized Tribe"
  sapmi_final_mod: "White Death Upon Europe"
- desc_sapmi_migrate_mod: "TODO MOD"
- desc_sapmi_food_mod: "TODO MOD"
- desc_sapmi_skirith: "TODO MOD"
- desc_sapmi_trade_mod: "TODO MOD"
- desc_tarand_grave_mod: "TODO MOD"
- desc_integrated_fenns: "TODO MOD"
- desc_reorganised_sapmi_1: "TODO MOD"
- desc_reorganised_sapmi_2: "TODO MOD"
+ desc_sapmi_migrate_mod: "Our naval dominance has lead to a sense of safety against the seas within our borders, causing a flock of #E Balts#! to migrate to our lands."
+ desc_sapmi_food_mod: "Our advancements in agriculture and fishing allow us to be completely sustained by our scarce resources."
+ desc_sapmi_skirith: "The Skirith tribe is well adapted to its land, able to blend in with their surroundings. They say the snow whispers."
+ desc_sapmi_trade_mod: "The Baltic trade is the most important trade avenue for our people, and thus, specialization and expertise has come of it."
+ desc_tarand_grave_mod: "The Tarand Grave is a signature feature of the #E Sapmi#! peoples, leaving the sites across the many regions they inhabited."
+ desc_integrated_fenns: "Fenns and Sapmi are related groups and have much value to each other. Through unity they will find strength."
+ desc_reorganised_sapmi_1: "The chief of the Sapmi people of Skirithenia has put forth a trend towards #E centralization#!."
+ desc_reorganised_sapmi_2: "The chief of the Sapmi people of Skirithenia has put forth a trend towards #E decentralization#!."
  desc_sapmi_final_mod: "It's time for our great nation to shed the attire of a modest domain of provinces and unleash our great might upon the unsuspecting Europeans."
  
